<resources>
    <string name="app_name">For Reddit Capstone</string>
    <string name="default_icon_description">subreddit icon</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="new_user_warning">In order to use this app, You must login to your reddit account.</string>
    <string name="sign_in_button">Sign In with Reddit</string>
    <string name="no_connection_error">In order to use this app you must have an internet connection.</string>
    <string name="hide_button_description">Hide</string>
    <string name="save_button_description">Save</string>
    <string name="hide_button_name">hide</string>
    <string name="save_button_name">save</string>
    <string name="save_button_message">Saved</string>
    <string name="hide_button_message">Hided</string>
    <string name="action_text_success">successfully.</string>
    <string name="widget_first_message">Saved post data will show in here.</string>
    <string name="admob_not_ready_message">Admob is not ready!</string>
    <string name="comment_success_message">Comment saved successfully.</string>
    <string name="details_post_action_messages">Please use home page to save/hide posts.</string>
    <string name="search_keyword_text">Search keyword: </string>
    <string name="not_found_message">not found!</string>
    <string name="post_text">Post </string>
    <!-- settings menu -->
    <string name="settings_homepage">Homepage</string>
    <string name="settings_subreddits">Subreddit List</string>
    <string name="settings_favorites">Favorites</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_search">Search</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="token_refresh_error">Token can not be refreshed! Please try again later.</string>
    <string name="subreddit_list_error">User Subreddit List is empty!!</string>
    <string name="internet_connectivity_error">No Internet Access !</string>
    <string name="search_hint">Search Subreddits.</string>
    <string name="subscribe_button">subscribe</string>
    <string name="unsubscribe_button">unsubscribe</string>
    <string name="title_activity_search_list">SearchListActivity</string>
    <string name="unauthorized_access_error">Something went wrong please try again in a moment.</string>
    <string name="unknown_access_error">Please try again later, if problem persist warn the developer.</string>
    <string name="search_text_error">Search text must be minimum of 3 characters.</string>
    <string name="no_favorites_data_error">You have no saved data.</string>
    <string name="no_network_message">Internet is Not Connected!</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
