<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings_homepage"
        android:icon="@drawable/ic_set_home"
        android:title="@string/settings_homepage"/>
    <item
        android:id="@+id/settings_subreddits"
        android:icon="@drawable/ic_set_subs"
        android:title="@string/settings_subreddits" />
    <item
        android:id="@+id/settings_favorites"
        android:icon="@drawable/ic_set_fav"
        android:title="@string/settings_favorites" />
    <item
        android:id="@+id/settings_logout"
        android:icon="@drawable/ic_set_log"
        android:title="@string/settings_logout" />
    <item
        android:id="@+id/settings_search"
        android:icon="@drawable/ic_set_search"
        android:title="@string/settings_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>